<resources>
    <string name="app_name">ProjectOne: Cars</string>
    <string name="car_count">Number of cars available: %1$d</string>
    <string name="cheapest_car">Cars available from: £%1$d</string>
    <string name="expensive_car">Max Price: £%1$d</string>
    <string name="average_car">Average Price: £%1$d</string>
    <string name="bmw_count">Number of BMW Cars Available: %1$d</string>
    <string name="mercedes_count">Number of Mercedes Cars Available: %1$d</string>
    <string name="ford_count">Number of Ford Cars Available: %1$d</string>
    <string name="automatic_count">Number of Automatic Cars Available: %1$d</string>
    <string name="manual_count">Number of Manual Cars Available: %1$d</string>
    <string name="picture_of_the_listed_car">Picture of the listed car</string>
    <string name="car_description_placeholder">Car Description \n Very Specific Details About This Specific Car. \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare arcu odio ut sem nulla pharetra diam sit. </string>
</resources>