<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical"
    android:paddingTop="10sp"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/number_of_cars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:textSize="20sp"
            android:text="@string/car_count" />

        <TextView
            android:id="@+id/cheapest_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:textSize="20sp"
            android:text="@string/cheapest_car" />

        <TextView
            android:id="@+id/expensive_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:textSize="20sp"
            android:text="@string/expensive_car" />

        <TextView
            android:id="@+id/average_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:textSize="20sp"
            android:text="@string/average_car" />

        <TextView
            android:id="@+id/number_of_bmw_cars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:textSize="20sp"
            android:text="@string/bmw_count" />

        <TextView
            android:id="@+id/number_of_mercedes_cars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:textSize="20sp"
            android:text="@string/mercedes_count" />

        <TextView
            android:id="@+id/number_of_ford_cars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:textSize="20sp"
            android:text="@string/ford_count" />

        <TextView
            android:id="@+id/number_of_automatic_cars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:textSize="20sp"
            android:text="@string/automatic_count" />

        <TextView
            android:id="@+id/number_of_manual_cars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:textSize="20sp"
            android:text="@string/manual_count" />

        <include layout="@layout/car_card" />

    </LinearLayout>
</ScrollView>


